--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=ecommerce
-server.port=8080
+# Tipo de cache
+spring.cache.type=simple
+# Nome dos caches
+spring.cache.cache-names=exchangeRates
