--- a/ecommerce/src/main/resources/application.properties
+++ b/ecommerce/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ecommerce
 # Tipo de cache
-spring.cache.type=simple
-# Nome dos caches
-spring.cache.cache-names=exchangeRates
+# spring.cache.type=simple
+# # Nome dos caches
+# spring.cache.cache-names=exchangeRates
