--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -46,6 +46,13 @@
 			<artifactId>resilience4j-circuitbreaker</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.github.resilience4j</groupId>
+			<artifactId>resilience4j-retry</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
